--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
     <title>Isaac Agutey | Full Stack Rails Developer</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
 
     <!-- Font Awesome Icon Font -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
 
     <!--Angular-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+    <script src="assets/js/angular.min.js"></script>
 
     <!--Angular Dependency Ui-router-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+    <script src="assets/js/angular-ui-router.js"></script>
 
     <!-- jQuery 1.11 -->
-    <script src='http://code.jquery.com/jquery-1.11.1.min.js'></script>
+    <script src='assets/js/jquery-1.11.1.min.js'></script>
 
     <!--Custom Styles-->
     <link rel="stylesheet" href="assets/css/style.css">
