modified and updated repository

--- a/home/_resume.html
+++ b/home/_resume.html
@@ -1,7 +1,8 @@
 <!-- RESUME -->
 <section id="about" class="fadeInLeft">
  <div class="section-container row nomargin">
-  <iframe src="https://resume.creddle.io/embed/fcvyqcs9hov"
+ <div class="row"><P>RESUME</P></div>
+  <iframe src="home/francisresume.pdf"
   width="850" height="850" seamless></iframe> 
- </div>
+ </div
 </section>
