--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <link rel="shortcut icon" href="assets/img/favicon%20.ico">
     <link rel="icon" href="assets/img/favicon%20.ico">
 
-    <title>Isaac Agutey | Full Stack Rails Developer</title>
+    <title>Appau | Full Stack Rails Developer</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Custom CSS -->
 
     <!-- Font Awesome Icon Font -->
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -67,16 +67,12 @@
     <!-- FIXED SIDEBAR -->
     <section class="col-md-3 col-md-offset-9 nopadding" id="intro">
         <div id="profile">
-            <img id="image" src="assets/css/iceage.jpg"  class="bounceIn">
-            <h1>Isaac Agutey</h1>
-            <h2 class="blink">Full Stack Developer</h2>
-            <div class="social_media">
-                <a href="https://github.com/isaacagutey" target="_blank"><i class="fa fa-github fa-fw"></i></a>
-                <a href="http://www.linkedin.com/in/isaacagutey" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
-                <a href="https://www.facebook.com/isaac.agutey" target="_blank"><i class="fa fa-facebook-square fa-fw"></i></a>
-                <a href="https://plus.google.com/u/0/+IsaacAgutey/posts" target="_blank"><i class="fa fa-google-plus fa-fw"></i></a>
-
-            </div>
+         <img id="image" src="assets/css/iceage.jpg"  class="bounceIn">
+          <h1>Appau Francis</h1>
+          <h2 class="blink">Full Stack Developer</h2>
+          <div class="social_media">
+           <a href="https://github.com/francisappau" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+          </div>
 
             <!-- NAVIGATION MENU -->
             <nav id="sidebar">
