--- a/home/_resume.html
+++ b/home/_resume.html
@@ -1,7 +1,7 @@
 <!-- RESUME -->
 <section id="about" class="fadeInLeft">
  <div class="section-container row nomargin">
- <div class="row"><P>RESUME</P></div>
+ <div class="row"><P align="center">RESUME</P></div>
   <iframe src="home/francisresume.pdf"
   width="850" height="850" seamless></iframe> 
  </div
