--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="Portfolio of Isaac Agutey | Full Stack Developer">
-    <meta name="author" content="Isaac Agutey">
+    <meta name="description" content="Portfolio of Appau Francis | Full Stack Developer">
+    <meta name="author" content="Appau Francis">
     <meta name="keywords" content="Agutey Web Development, UI, UX, Designer, Developer">
 
-    <meta property="og:title" content="Isaac Agutey">
+    <meta property="og:title" content="Appau Francis">
     <meta property="og:description" content="Full Stack Developer">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.isaacagutey.com">
+    <meta property="og:url" content="http://appau.herokuapp.com/#/about">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="blue">
