--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Portfolio of Appau Francis | Full Stack Developer">
     <meta name="author" content="Appau Francis">
-    <meta name="keywords" content="Agutey Web Development, UI, UX, Designer, Developer">
+    <meta name="keywords" content="Appau Web Development, UI, UX, Designer, Developer">
 
     <meta property="og:title" content="Appau Francis">
     <meta property="og:description" content="Full Stack Developer">
