--- a/home/app.html
+++ b/home/app.html
@@ -37,10 +37,7 @@
   </nav>
 
   <div class="carousel fade" data-ride="carousel" id="featured">
-
-    <ol class="carousel-indicators">
-    </ol>
-
+    <ol class="carousel-indicators"></ol>
     <div class="carousel-inner fullheight">
       <div class="item"><img src="images/carousel-lifestyle.jpg" alt="Lifestyle Photo"></div>
       <div class="item"><img src="images/carousel-mission.jpg" alt="Mission"></div>
@@ -48,7 +45,6 @@
       <div class="item"><img src="images/carousel-fish.jpg" alt="Fish"></div>
       <div class="item"><img src="images/carousel-exoticanimals.jpg" alt="Exotic Animals"></div>      
     </div><!-- carousel-inner -->
-
     <a class="left carousel-control" href="#featured" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
@@ -57,7 +53,6 @@
     </a>
   </div><!-- featured carousel -->
 </header>
-
 <div class="main">
   <div class="page" id="mission">
     <div class="content container">
@@ -152,8 +147,6 @@
             </div><!-- info -->
           </div> <!-- inner row -->
         </div> <!-- doctor -->
-
-
       </div><!-- outer row -->
     </div><!-- container -->
   </div><!-- staff page -->
